--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="firstUniqueCharacter.js"></script>
+<script src="singleNumber.js"></script>
 </body>
 </html>
