solved reduce a number to zero by nesting conditionals inside a while loop

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="solved/runningSumOf1dArray.js"></script>
+<script src="reduceANumberToZero.js"></script>
 </body>
 </html>
