solved lessThanCurrentNum using two pointers & fixed findDuplicate to access the correct value on the accumulator object

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="solved/containsDuplicate.js"></script>
+<script src="findDuplicate.js"></script>
 </body>
 </html>
