solved richestCustomer using map, reduce, and Mathmax

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="findDuplicate.js"></script>
+<script src="solved/richestCustomer.js"></script>
 </body>
 </html>
