solved subtract product and sum using map

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="solved/richestCustomer.js"></script>
+<script src="Javascript%20Fundamentals/spreadAndRestOperator.js"></script>
 </body>
 </html>
