solved nestedParentheses using math.max, first with loop then with foreach

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="solved/createTargetArray.js"></script>
+<script src="nestedParentheses.js"></script>
 </body>
 </html>
