solved countOfMatches using a while loop and conditionals

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="nestedParentheses.js"></script>
+<script src="solved/countOfMatches.js"></script>
 </body>
 </html>
