solved lengthOddSubarrys using conditionals, slice w/spread, and reduce

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="bitwiseXOR.js"></script>
+<script src="solved/lengthOddSubarrays.js"></script>
 </body>
 </html>
