solved reverse array using decrementing loop and push method

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="solved/lengthOddSubarrays.js"></script>
+<script src="solved/reverseArray.js"></script>
 </body>
 </html>
