solved timeConversion with replace, parseInt, and substring methods

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="ranks.js"></script>
+<script src="solved/timeConversion.js"></script>
 </body>
 </html>
