solved arrayPartition using sort, for loop, and reduce, then refactored the loop into reduce

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="solved/timeConversion.js"></script>
+<script src="solved/arrayPartition.js"></script>
 </body>
 </html>
