solved gradingStudents using modulo and arithmetic

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="solved/arrayPartition.js"></script>
+<script src="solved/gradingStudents.js"></script>
 </body>
 </html>
