--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="solved/gradingStudents.js"></script>
+<script src="solved/stringMatching.js"></script>
 </body>
 </html>
