solved longestPalindrome using a helper function, two pointers, and the substring method

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="solved/repeatedNTimes.js"></script>
+<script src="longestPalindrome.js"></script>
 </body>
 </html>
