solved countPrimes using the sieve of eratothenes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="longestPalindrome.js"></script>
+<script src="solved/countPrimes1.js"></script>
 </body>
 </html>
