solved freqAlphabets using concat, fromCharCode, parseInt, and toLowerCase methods

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="solved/havlesAreAlike.js"></script>
+<script src="solved/freqAlphabets.js"></script>
 </body>
 </html>
