solved sortArrayByParity using a for loop, unshift, and push methods

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="solved/freqAlphabets.js"></script>
+<script src="minimumBribes.js"></script>
 </body>
 </html>
