solved countMatches using the forEach method, first with conditionals and then with an object

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="minimumBribes.js"></script>
+<script src="solved/countMatches.js"></script>
 </body>
 </html>
