solved averageSalary with sort, filter, and reduce

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="solved/countNegatives.js"></script>
+<script src="solved/averageSalary.js"></script>
 </body>
 </html>
